<resources>
	<!-- display strings: general, no prefixes -->
	<string name="app_name">Larm Larms</string>
	<string name="space">" "</string>
	<string name="separator">", "</string>

	<!-- display strings: notifications, prefixed by "notif" -->
	<string name="notif_channel_name">Alarms</string>
	<string name="notif_ticker">Ringing alarm</string>
	<!-- TODO: delete this later, when it's not being used -->
	<string name="notif_exit">exit</string>
	<string name="notif_dismiss">dismiss</string>
	<string name="notif_snooze">snooze</string>
	<string name="notif_service_description">Starts alarms and plays alarm ringtones.</string>

	<!-- display strings: MainActivity, prefixed by "main" -->
	<string name="main_no_alarms_text">There\'s nothing here!</string>
	<string name="main_add_alarm_button">+</string>

	<!-- MainActivity repeat type display strings -->
	<string name="main_generic_repeat_string">"Every "</string>
	<string name="main_no_repeats_string">none</string>

	<string name="main_once_abs_rel_prefix">"Once on "</string>
	<string name="main_weekly_prefix">"Weekly on "</string>
	<string name="main_weekly_everyday">Every day</string>
	<string name="main_weekly_weekdays">Weekdays</string>
	<string name="main_weekly_weekends">Weekends</string>
	<string name="main_monthly_suffix">" of the month"</string>
	<string name="main_monthly_exception_text">", except for "</string>
	<string name="main_date_yearly_prefix">"Every year on "</string>
	<string name="main_offset_text_2">" days"</string>
	<string name="main_offset_text_3">" hours"</string>
	<string name="main_offset_text_4">" minutes"</string>
	<string name="main_offset_text_5">"\nNext ring date: "</string>

	<!-- description strings: MainActivity, prefixed by "main," suffixed by "descrip" -->
	<string name="main_add_folder_button_descrip">Add folder</string>
	<string name="main_folder_icon_descrip">Folder icon</string>

	<!-- display strings: AlarmCreator, prefixed by "editor"
		 if for Alarms specifically, prefixed by "alarm_editor"
		 if for AlarmGroups specifically, prefixed by "folder_editor" -->
	<string name="editor_back_button">back</string>
	<string name="editor_save_button">save</string>
	<string name="editor_name_text">"Title: "</string>
	<string name="alarm_editor_repeat_type_text">"Type of alarm: "</string>
	<string name="alarm_editor_name_hint">Alarm name</string>
	<string name="folder_editor_name_hint">Folder name</string>
	<string name="alarm_editor_sound_button">Set Ringtone</string>
	<string name="alarm_editor_silent">Silent</string>

	<string name="alarm_editor_offset_days_text">"Days: "</string>
	<string name="alarm_editor_offset_hours_text">"Hours: "</string>
	<string name="alarm_editor_offset_mins_text">"Minutes: "</string>

	<string name="alarm_editor_date_monthly_text_1">"On the "</string>
	<string name="alarm_editor_date_monthly_text_2">" day of the month"</string>

	<string name="alarm_editor_day_monthly_text_1">"Every "</string>

	<string name="alarm_editor_weeks_text">"Ring week: "</string>

	<string name="alarm_editor_days_1_short">Sun</string>
	<string name="alarm_editor_days_2_short">Mon</string>
	<string name="alarm_editor_days_3_short">Tue</string>
	<string name="alarm_editor_days_4_short">Wed</string>
	<string name="alarm_editor_days_5_short">Thu</string>
	<string name="alarm_editor_days_6_short">Fri</string>
	<string name="alarm_editor_days_7_short">Sat</string>

	<string name="alarm_editor_days_1_long">Sunday</string>
	<string name="alarm_editor_days_2_long">Monday</string>
	<string name="alarm_editor_days_3_long">Tuesday</string>
	<string name="alarm_editor_days_4_long">Wednesday</string>
	<string name="alarm_editor_days_5_long">Thursday</string>
	<string name="alarm_editor_days_6_long">Friday</string>
	<string name="alarm_editor_days_7_long">Saturday</string>

	<string name="alarm_editor_months_1">Jan</string>
	<string name="alarm_editor_months_2">Feb</string>
	<string name="alarm_editor_months_3">Mar</string>
	<string name="alarm_editor_months_4">Apr</string>
	<string name="alarm_editor_months_5">May</string>
	<string name="alarm_editor_months_6">Jun</string>
	<string name="alarm_editor_months_7">Jul</string>
	<string name="alarm_editor_months_8">Aug</string>
	<string name="alarm_editor_months_9">Sep</string>
	<string name="alarm_editor_months_10">Oct</string>
	<string name="alarm_editor_months_11">Nov</string>
	<string name="alarm_editor_months_12">Dec</string>

	<string-array name="alarm_day_strings_short">
		<item>@string/alarm_editor_days_1_short</item>
		<item>@string/alarm_editor_days_2_short</item>
		<item>@string/alarm_editor_days_3_short</item>
		<item>@string/alarm_editor_days_4_short</item>
		<item>@string/alarm_editor_days_5_short</item>
		<item>@string/alarm_editor_days_6_short</item>
		<item>@string/alarm_editor_days_7_short</item>
	</string-array>

	<string-array name="alarm_day_strings_long">
		<item>@string/alarm_editor_days_1_long</item>
		<item>@string/alarm_editor_days_2_long</item>
		<item>@string/alarm_editor_days_3_long</item>
		<item>@string/alarm_editor_days_4_long</item>
		<item>@string/alarm_editor_days_5_long</item>
		<item>@string/alarm_editor_days_6_long</item>
		<item>@string/alarm_editor_days_7_long</item>
	</string-array>

	<string-array name="alarm_date_suffix_strings">
		<item>st</item>
		<item>nd</item>
		<item>rd</item>
		<item>th</item>
	</string-array>

	<string-array name="alarm_month_strings">
		<item>@string/alarm_editor_months_1</item>
		<item>@string/alarm_editor_months_2</item>
		<item>@string/alarm_editor_months_3</item>
		<item>@string/alarm_editor_months_4</item>
		<item>@string/alarm_editor_months_5</item>
		<item>@string/alarm_editor_months_6</item>
		<item>@string/alarm_editor_months_7</item>
		<item>@string/alarm_editor_months_8</item>
		<item>@string/alarm_editor_months_9</item>
		<item>@string/alarm_editor_months_10</item>
		<item>@string/alarm_editor_months_11</item>
		<item>@string/alarm_editor_months_12</item>
	</string-array>

	<!-- NOTE: it is assumed in ListableEditor that these items correspond (in the same order) to
		 the repeat type constants defined in Alarm. -->
	<string-array name="alarm_repeat_strings">
		<item>ring once (pick a date/time)</item>
		<item>ring once (offset of current date/time)</item>
		<item>ring every week on certain days</item>

		<!-- TODO: perhaps build the strings programmatically and/or give examples? -->
		<item>ring monthly on a specific date</item>
		<item>ring monthly on a specific day</item>
		<item>ring yearly on a specific date</item>
		<item>ring every _____ minutes/hours/days</item>
	</string-array>

	<string-array name="alarm_week_strings">
		<item>first</item>
		<item>second</item>
		<item>third</item>
		<item>fourth</item>
		<item>last</item>
	</string-array>
</resources>
