<?xml version="1.0" encoding="utf-8"?>
<!-- NOTE: designtime only x/y positions: layout_editor_absoluteX or layout_editor_absoluteY -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	style="@style/Theme.AppTheme">

	<include layout="@layout/editor_menu" />

	<!--
	Naming conventions for input/text field ids (here only):
	All alarm-specific ids are prefixed with "alarm"
	Id names correspond to the field it fills in its Alarm object (the name field is filled by
	EditText with id alarmNameInput)
	Ids for fields are always appended with "Input" and their corresponding labels with "Text"
	TODO: remove unnecessary ids, like for most labels
	-->
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<!-- repeat type layout -->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:baselineAligned="true">

				<TextView
					style="@style/EditorLabelStyle"

					android:id="@+id/alarmRepeatTypeText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:labelFor="@+id/alarmRepeatTypeInput"
					android:text="@string/alarm_editor_repeat_type_text"/>
				<Spinner
					style="@style/SpinnerStyle"

					android:id="@+id/alarmRepeatTypeInput"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>

			<!-- - - - - - - - - - - - - - - -  Repeat Type Inputs  - - - - - - - - - - - - - - -->

			<!-- TODO: could make time/date pickers dialogs instead? -->
			<TimePicker
				style="@style/TimePickerStyle"

				android:id="@+id/alarmTimeInput"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/marginSizeDefault"
				android:visibility="gone"/>

			<!-- TODO: selecting year doesn't work very well (can't scroll, calendar mode only) -->
			<DatePicker
				style="@style/DatePickerStyle"

				android:id="@+id/alarmDateInput"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:visibility="gone" />

			<!-- date of month layout -->
			<LinearLayout
				android:id="@+id/alarmDateOfMonth"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center"
				android:visibility="gone">
				<TextView
					style="@style/EditorLabelStyle"

					android:id="@+id/alarmDateOfMonthText1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/alarm_editor_date_monthly_text_1"/>
				<!-- TODO: consider making it a picker dependent on the ordinals string array -->
				<NumberPicker
					android:id="@+id/alarmDateOfMonthInput"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<TextView
					style="@style/EditorLabelStyle"

					android:id="@+id/alarmDateOfMonthText2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/alarm_editor_date_monthly_text_2"/>
			</LinearLayout>

			<!-- TODO: provide alt resources for smaller screens? If not, text could be cut off
				 TODO: could make these into buttons (perhaps easier to click?) -->
			<!-- days of week layout -->
			<LinearLayout
				android:id="@+id/alarmDaysInput"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center_horizontal"
				android:visibility="gone">
				<TextView
					style="@style/EditorDaysStyle"

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="0"
					android:onClick="dayOfWeekClicked" />
				<TextView
					style="@style/EditorDaysStyle"

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="1"
					android:onClick="dayOfWeekClicked" />
				<TextView
					style="@style/EditorDaysStyle"

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="2"
					android:onClick="dayOfWeekClicked" />
				<TextView
					style="@style/EditorDaysStyle"

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="3"
					android:onClick="dayOfWeekClicked" />
				<TextView
					style="@style/EditorDaysStyle"

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="4"
					android:onClick="dayOfWeekClicked" />
				<TextView
					style="@style/EditorDaysStyle"

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="5"
					android:onClick="dayOfWeekClicked" />
				<TextView
					style="@style/EditorDaysStyle"

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="6"
					android:onClick="dayOfWeekClicked" />
			</LinearLayout>

			<!-- DAY_MONTHLY layout -->
			<LinearLayout
				android:id="@+id/alarmDayMonthly"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:visibility="gone">

				<TextView
					style="@style/EditorLabelStyle"

					android:id="@+id/alarmWeekOfMonthText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:labelFor="@+id/alarmWeekOfMonthInput"
					android:text="@string/alarm_editor_day_monthly_text_1"/>
				<Spinner
					style="@style/SpinnerStyle"

					android:id="@+id/alarmWeekOfMonthInput"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
				<Spinner
					style="@style/SpinnerStyle"

					android:id="@+id/alarmDayOfWeekInput"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>

			<!-- TODO: provide alt resources for smaller/larger screens? If not, text could be cut
			off or unnecessarily broken up -->
			<!-- months of year layout -->
			<LinearLayout
				android:id="@+id/alarmMonthsInput"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="gone">
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="center_horizontal">
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="0"
						android:onClick="monthClicked" />
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="1"
						android:onClick="monthClicked" />
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="2"
						android:onClick="monthClicked" />
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="3"
						android:onClick="monthClicked" />
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="4"
						android:onClick="monthClicked" />
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="5"
						android:onClick="monthClicked" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="center_horizontal">
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="6"
						android:onClick="monthClicked" />
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="7"
						android:onClick="monthClicked" />
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="8"
						android:onClick="monthClicked" />
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="9"
						android:onClick="monthClicked" />
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="10"
						android:onClick="monthClicked" />
					<TextView
						style="@style/EditorDaysStyle"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:tag="11"
						android:onClick="monthClicked" />
				</LinearLayout>
			</LinearLayout>

			<!-- offset days layout -->
			<LinearLayout
				android:id="@+id/alarmOffsetDays"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:visibility="gone">

				<TextView
					style="@style/EditorLabelStyle"

					android:id="@+id/alarmOffsetDaysText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:labelFor="@+id/alarmOffsetDaysInput"
					android:text="@string/alarm_editor_offset_days_text" />
				<EditText
					style="@style/EditorOffsetInputStyle"

					android:id="@+id/alarmOffsetDaysInput"
					android:inputType="number"
					android:imeOptions="actionNext" />
			</LinearLayout>

			<!-- offset hours layout -->
			<LinearLayout
				android:id="@+id/alarmOffsetHours"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:visibility="gone">

				<TextView
					style="@style/EditorLabelStyle"

					android:id="@+id/alarmOffsetHoursText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:labelFor="@+id/alarmOffsetHoursInput"
					android:text="@string/alarm_editor_offset_hours_text" />
				<EditText
					style="@style/EditorOffsetInputStyle"

					android:id="@+id/alarmOffsetHoursInput"
					android:inputType="number"
					android:imeOptions="actionNext" />
			</LinearLayout>

			<!-- offset mins layout -->
			<LinearLayout
				android:id="@+id/alarmOffsetMins"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:visibility="gone">

				<TextView
					style="@style/EditorLabelStyle"

					android:id="@+id/alarmOffsetMinsText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:labelFor="@+id/alarmOffsetMinsInput"
					android:text="@string/alarm_editor_offset_mins_text" />
				<EditText
					style="@style/EditorOffsetInputStyle"

					android:id="@+id/alarmOffsetMinsInput"
					android:inputType="number"
					android:imeOptions="actionDone" />
			</LinearLayout>

			<!-- - - - - - - - - - - - - - - -  Other Input Fields  - - - - - - - - - - - - - - -->

			<include layout="@layout/editor_common_fields" />

			<!-- ringtone button -->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<android.widget.Button
					style="@style/ButtonStyle.Borderless"

					android:id="@+id/soundButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:onClick="chooseSound"
					android:text="@string/alarm_editor_sound_button" />
				<TextView
					style="@style/EditorLabelStyle"

					android:id="@+id/soundText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:labelFor="@+id/alarmNameInput"
					android:text="@null" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
